# my-tailscale-playground-

./: .gitignore  flake.nix  flakehashes.json  go.mod  go.sum  shell.nix
client/local/: tailnetlock.go
cmd/k8s-operator/: sts.go  svc.go
cmd/tailprobe/: README.md  apphealth.go  apphealth_test.go  collect.go  collect_test.go  host.go  host_linux.go  host_other.go  host_test.go  main.go  main_test.go  metrics.go  metrics_test.go  parse.go  parse_test.go  server.go  server_test.go  sysread.go  sysread_test.go  vitals_types.go  vitals_types_test.go
control/controlclient/: key_expiry_test.go
ipn/: backend.go
ipn/conffile/: serveconf.go
ipn/ipnlocal/: bus.go  bus_test.go  local.go  local_test.go  tailnet-lock.go  tailnetlock_disabled.go
ipn/ipnstate/: ipnstate.go
k8s-operator/: utils.go
lifelog/: LICENSE  README.md  pyproject.toml
lifelog/docs/: concept.md  design.md
lifelog/lifelog/: __init__.py  __main__.py  breathing.py  bus.py  config.py  fusion.py  model.py  report.py  rules.py  simulator.py  sleep.py  store.py  tui.py
lifelog/lifelog/collectors/: __init__.py  base.py  defaults.py  network.py  plug.py  runner.py  ruview.py  tailscale.py
lifelog/tests/: test_collectors.py  test_pipeline.py  test_ruview.py  test_sleep.py
notes/: concept-and-findings.md  lifelog-wifi-sensing-design.md  mac-windows-smb-over-tailscale.md
scripts/: extract-subprojects.sh  fleet-capability-probe.sh
ssh/tailssh/: incubator.go  tailssh.go
tailhub/: .gitignore  README.md  pyproject.toml
tailhub/deploy/: README.md  com.weeeha.tailhub.plist
tailhub/tailhub/: __init__.py  __main__.py  app.py  dashboard.py  fleet.py  scheduler.py  scrape.py  settings.py  store.py  vitals_norm.py
tailhub/tests/: test_app.py  test_fleet.py  test_scheduler.py  test_scrape.py  test_settings.py  test_store.py  test_store_history.py  test_vitals_norm.py
tailsnap/: README.md  pyproject.toml
tailsnap/tailsnap/: __init__.py  __main__.py  client.py  commands.py  models.py  render.py
tailsnap/tests/: test_tailsnap.py
tailtop/: README.md  pyproject.toml
tailtop/agent/: fleet_collect.sh
tailtop/spikes/: spike_results.txt  tte_spike.py
tailtop/tailtop/: app.py  com.weeeha.tailtop-alert.plist  fleet_report.py  inventory.py  state.py
tailtop/tests/: test_alert_cmd.py  test_alert_strip.py  test_app.py  test_belt_layout.py  (+29 more)
(+57 files in other folders)
