[project]
name = "tailsnap"
version = "0.1.0"
description = "A CLI snapshot of your tailnet — print-and-exit visual readouts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = ["tailscale", "cli", "wireguard", "vpn", "network"]
dependencies = []  # pure stdlib

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
tailsnap = "tailsnap.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tailsnap"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
